--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit==1.26.0
-pandas==1.5.3
-numpy==1.24.4
+
 scikit-learn==1.2.2
 matplotlib==3.7.2
 email-validator==2.0.0.post2
+
+
+streamlit==1.26.0
+pandas>=2.1.0
+numpy>=1.27.0
